--- a/articles.html
+++ b/articles.html
@@ -153,6 +153,10 @@
   font-weight: bold;
 }  
 
+img.a {
+  vertical-align: 50%;
+}
+
 </style>
 </head>
 <body style="font-family: Livvic;">
@@ -178,7 +182,8 @@
 <div style="overflow:auto">
 
 <button type="button" class="collapsible"><span style="font-family:Livvic;">
-Spread positivity? Want to inspire others through your articles?</span></button>
+Spread positivity? Want to inspire others through your articles?</span>
+ &nbsp; <img class="a" src="imgs/new1.gif" style="width:23px;height:12px;"></button>
 <div class="content">
   <p><a href= "mailto:soulwaybysarvesh@gmail.com" style="text-decoration: none;">
 	<span style ="color: white">
@@ -197,6 +202,25 @@ Spread positivity? Want to inspire others through your articles?</span></button>
   <center>
   
   <img src="imgs/startline.png" style="width:300px;height:300px;">
+  
+    <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>Petals of Struggle</u></span> <br>Article by Anny S.</b><br>
+   <span id="dots5"></span><span id="more5">
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span>
+  <br><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read now</button></p>
+<br>
   
   <p id="borderimg1">
   <b> <span style="font-size: 18px;"><u>Procrastinating the Procrastination</u></span> 
@@ -224,27 +248,25 @@ After all, you are a precious piece of a human with so much talent in and out.
   <br>
   
   <p id="borderimg1">
-  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+  <b> <span style="font-size: 18px;"><u>Embracing Failures</u></span> <br>Article by Raunak Jain</b><br>
    <span id="dots2"></span><span id="more2">
-   <span style="text-align: justify;">
-   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
-   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
-   it continues. Later on, the same us are left crying. If you think things are magically gonna 
-fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
-I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
-It devastates everything. So what can we do to erase this habit? Well the answer is so simple
- that it was always there with you. As the cliche saying goes, "Start grinding, start working".
- Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
- It's easier said than done though, no doubt. But who said trying has limited attempts?
-Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
-Always tell yourself that you deserve something much bigger than your excuses and laziness. 
-After all, you are a precious piece of a human with so much talent in and out.
-  </span></span>
+  In school, Steve Jobs suffered as he had dyslexia. Jobs did not like education from his early days in
+  elementary school, where he became dissatisfied with schooling to college, and  dropped out after just
+  one semester, because he did not feel that in his life it had practical implications.
+But not completing his education did not prevent him from achieving success like becoming the CEO of one 
+of the most creative technology firms in the world.Jobs used some of what he learned in school to help him 
+create many of his Apple products, but he also used life experience.
+Jobs preached that no matter what happens in your life, school failures or a failed career path, any factor
+ will help you down the road somehow. "Again, you can't connect the dots looking forward,you can only connect 
+ them looking backwards," Jobs said. "So you have to trust that the dots will somehow connect in your future. 
+ You have to trust in something—your gut, destiny, life, karma, whatever. This approach has never let me down,
+ and it has made all the difference in my life."
+  </span>
   <br><button class ="buttonreadmore" onclick="myFunction2()" id="myBtn2">Read now</button></p>
 <br>
 
    <p id="borderimg1">
-  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+  <b> <span style="font-size: 18px;"><u>From Closet to Boutique</u></span> <br>Article by Riya Maheshwari</b><br>
    <span id="dots3"></span><span id="more3">
    <span style="text-align: justify;">
    lazy is one of them. We take things for granted. And most importantly, we procastinate. 
@@ -261,10 +283,10 @@ Always tell yourself that you deserve something much bigger than your excuses an
 After all, you are a precious piece of a human with so much talent in and out.
   </span></span>
   <br><button class ="buttonreadmore" onclick="myFunction3()" id="myBtn3">Read now</button></p>
-	  <br>
+  <br>
 
   <p id="borderimg1">
-  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+  <b> <span style="font-size: 18px;"><u>DESSERTMETER</u></span> <br>Article by Khushi Thakkar</b><br>
    <span id="dots4"></span><span id="more4">
    <span style="text-align: justify;">
    lazy is one of them. We take things for granted. And most importantly, we procastinate. 
@@ -281,26 +303,6 @@ Always tell yourself that you deserve something much bigger than your excuses an
 After all, you are a precious piece of a human with so much talent in and out.
   </span></span>
   <br><button class ="buttonreadmore" onclick="myFunction4()" id="myBtn4">Read now</button></p>
-<br>
-
-  <p id="borderimg1">
-  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
-   <span id="dots5"></span><span id="more5">
-   <span style="text-align: justify;">
-   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
-   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
-   it continues. Later on, the same us are left crying. If you think things are magically gonna 
-fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
-I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
-It devastates everything. So what can we do to erase this habit? Well the answer is so simple
- that it was always there with you. As the cliche saying goes, "Start grinding, start working".
- Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
- It's easier said than done though, no doubt. But who said trying has limited attempts?
-Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
-Always tell yourself that you deserve something much bigger than your excuses and laziness. 
-After all, you are a precious piece of a human with so much talent in and out.
-  </span></span>
-  <br><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read now</button></p>
 <br>
   
   </center>
@@ -328,7 +330,8 @@ Any kind of similarity is purely coincidental.
 The content is subject to change and should not be constructed as a commitment. 
 	</div>
 
-	
+</body>
+
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
@@ -427,5 +430,5 @@ function myFunction5() {
 }
 
 </script>
-</body>
+
 </html>
