--- a/index.html
+++ b/index.html
@@ -101,6 +101,66 @@
   border: 7px solid transparent;
   padding: 5px;
   border: 4px solid #E7D981;
+    border-style: double;
+}
+
+#borderimg2 { 
+  border: 7px solid transparent;
+  padding: 5px;
+  border: 4px solid #e7d981;
+  border-style: double;
+}
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: white;
+  font-size: 12px;
+  padding: 4px 20px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .3} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .3} 
+  to {opacity: 1}
 }
 
 </style>
@@ -132,13 +192,40 @@
 
   <div class="main">
 <center>
-    <h2>Welcome little warrior!</h2>
-	<p>Falling and rising in this lie-F?</p>
+    <h4 id ="borderimg2">Welcome little warrior!<br>
+	Falling and rising in this lie-F?<br>
+	</h4>
+	
+	<div class="slideshow-container">
 
-	<img src="imgs/stw.gif" width="325px" height="325px">
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="imgs/slide1.png" style="width:325px;height:325px;">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="imgs/slide2.png" style="width:325px;height:325px;">
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="imgs/slide3.png" style="width:325px;height:325px;">
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
 </center>	
+
 	<span class="text">
-	 <p id="borderimg1">I know how busy we have been in our lives; trying to focus on the exceptional dreams with mediocre efforts 
+	 <p id="borderimg1"> 
+	 We know how busy we have been in our lives; trying to focus on the exceptional dreams with mediocre efforts 
 	to achieve them? Dreams and motivation are so interconnected; we see it, we feel it and then we 
 	forget it. Sometimes, we limit down our true potential in trying to satisfy ourselves 
 	by just settling for a life that's less than the one we're capable of living alike with the
@@ -147,20 +234,28 @@
 	Prepare for imperfections, prepare for struggles, prepare for sacrifices
 	and at the end:<br>
 	<b>
-	You would learn to count smiles, instead of tears.<br>
-	You would learn to embrace courage, instead of fears.<br>
+	You would learn to count SMILES, instead of tears.<br>
+	You would learn to embrace COURAGE, instead of fears.<br>
 	</b>
 	So, through all the chaotic art, all the playful pain, all the numb tears, all the dark nights,
 	all the unsuccessful stories; meanwhile in the process, <br>
-	<b> A LITTLE WARRIOR WAS MADE.</b>
+	<b> A LITTLE WARRIOR WAS MADE.</b><br>
+	
+	<span style="background-color: #fbf9ea"><b><center>
+	We encourage you to send your content in course of 
+	book reviews and articles. We'll post them for you. On a light note, we would be highly obliged 
+	if you could send some positive and inspiring content; sharing some influential lines may motivate our readers.
+ You may kindly navigate to respective <i>Book Reviews</i> and <i>Articles</i> page,
+	read the details and submit.</center></b></span>
 	</p>
 	</span>
 	
 	<center>
-    <img src="imgs/rewardee.png" width="300px" height="300px">
-
-</center>
-	
+		<img src="imgs/stw.gif" width="325px" height="325px"><br>
+		  <hr style="height:1px;border-width:0;background-color:#E7D981">
+  <br>
+    <img src="imgs/rewardeey.png" width="325px" height="325px">
+	</center>
   
 </div>
 </div>
@@ -187,7 +282,28 @@ Any kind of similarity is purely coincidental.
 The content is subject to change and should not be constructed as a commitment. 
 	</div>
 
-	
-
 </body>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
 </html>
