--- a/articles.html
+++ b/articles.html
@@ -128,7 +128,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #ffb399;
+  background-color: #ff8c66;
 }
 
 #more1 {display: none;} 
@@ -136,6 +136,7 @@
 #more3 {display: none;}  
 #more4 {display: none;}  
 #more5 {display: none;}   
+#more6 {display: none;}   
 
   
 .buttonreadmore {
@@ -182,15 +183,15 @@ img.a {
 <div style="overflow:auto">
 
 <button type="button" class="collapsible"><span style="font-family:Livvic;">
-Spread positivity? Want to inspire others through your articles?</span>
- &nbsp; <img class="a" src="imgs/new1.gif" style="width:23px;height:12px;"></button>
+Spread positivity? Want to inspire others through articles?</span>
+ <img class="a" src="imgs/new1.gif" style="width:23px;height:12px;"></button>
 <div class="content">
   <p><a href= "mailto:soulwaybysarvesh@gmail.com" style="text-decoration: none;">
 	<span style ="color: white">
 	<u>Click here</u></a> <span style ="color: white">for submitting the articles.
 	Attach your name, title and content. Kindly ensure that your articles shall encase
 	the positive and inspirational influence.
-	Word limit is specified to a maximum of 300 words. See below articles for a better understanding.
+	Word limit is specified to 100-300 words. See below articles for a better understanding.
 	Keep writing! Keep sharing! :)
 	</span>
 	</p>
@@ -204,29 +205,18 @@ Spread positivity? Want to inspire others through your articles?</span>
   <img src="imgs/startline.png" style="width:300px;height:300px;">
   
     <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>Petals of Struggle</u></span> <br>Article by Anny S.</b><br>
+  <b> <span style="font-size: 18px;"><u>Petals of Struggle</u></b></span> <br>by Anny S.<br>
    <span id="dots5"></span><span id="more5">
-   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
-   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
-   it continues. Later on, the same us are left crying. If you think things are magically gonna 
-fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
-I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
-It devastates everything. So what can we do to erase this habit? Well the answer is so simple
- that it was always there with you. As the cliche saying goes, "Start grinding, start working".
- Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
- It's easier said than done though, no doubt. But who said trying has limited attempts?
-Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
-Always tell yourself that you deserve something much bigger than your excuses and laziness. 
-After all, you are a precious piece of a human with so much talent in and out.
+   content
   </span>
   <br><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read now</button></p>
 <br>
   
   <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>Procrastinating the Procrastination</u></span> 
-  <br>Article by Shourya Rohilla</b><br>
+  <b> <span style="font-size: 18px;"><u>Procrastinating the Procrastination</u></b></span> 
+  <br>by Shourya Rohilla<br>
    <span id="dots1"></span><span id="more1">
-   <span style="text-align: justify;">
+
    The thing about humans is that they want rest. They require rest when they feel they are tired,
    which is no doubt true. But many a times we think we are tired when we have just done a little 
    to no work. And then we take rest. This doesn't help as it becomes a habit. 
@@ -243,12 +233,61 @@ It devastates everything. So what can we do to erase this habit? Well the answer
 Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
 Always tell yourself that you deserve something much bigger than your excuses and laziness. 
 After all, you are a precious piece of a human with so much talent in and out.
-  </span></span>
+  </span>
   <br><button class ="buttonreadmore" onclick="myFunction1()" id="myBtn1">Read now</button></p>
   <br>
   
-  <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>Embracing Failures</u></span> <br>Article by Raunak Jain</b><br>
+     <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>From Closet to Boutique</u></b></span> <br>by Riya Maheshwari<br>
+   <span id="dots6"></span><span id="more6">
+They say dreams speak through thoughts and action! Wondering how far we can see through,
+how far we can grow through, and most importantly how long we can do this. As a kid, from a small closet of 
+fashion-apparel and things, right from basics, to hugely
+dream about what could we possibly fill in to own a whole fancy boutique, and when we think we could do so; now there 
+comes a spark, how if one goes for
+it at their very own pace (of course continuous efforts), 'set small steps to reach the bigger ladder', 
+then repeat the small steps, 
+another bigger ladder, and so on. That's how you define sky is the limit no?
+Practice is an art, when done seriously, it earn wonders and miracles, seriously! Now the bigger
+picture is the willingness and courage to plan and provide an affordable yet fancy-dreamt closet to everyone?
+ Fun and seriousness
+are never written together, naah not here! The more fun you have in putting up ideas to spread the affordable 
+fancy apparel, the more your heart appreciates it. There will be a lot of trial and error, but we know
+tide turns every now and then and saying it for a boutique, it's up to the mark.
+ From a small closet to owning a boutique, only extension in ideas, thoughts, the never give up spirit, and
+ a kind effort to provide it for everyone out there!
+Certainly sounds like that child who dreamt of that owning a bigger picture once, is now 
+getting into thoughts and action. So yes, they spoke it right, dreams do speak through thoughts and action!
+  </span>
+  <br><button class ="buttonreadmore" onclick="myFunction6()" id="myBtn6">Read now</button></p>
+  <br>
+  
+   <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>LaFusionDeDessertmeter</u></b></span> <br>by Khushi Thakkar<br>
+   <span id="dots3"></span><span id="more3">
+   “The future belongs to those who believe in the beauty of their dreams.” 
+– Eleanor Roosevelt <br>
+  I have always had a knack for all things creative, be it painting, dancing or cooking! But I found
+  my real love for baking in class 12th (Surprising, right?) when I would keep on baking an array 
+  of items just to relieve myself from the stressful situation of studying (wicked laugh). I didn’t 
+  realize when this ‘baking for time pass’ got converted into my greatest passion till now and how 
+  this passion keeps on motivating me to innovate and create new food items each and every day! 
+  Even though, I wasn’t able to take this field as my profession, but I did not let that undermine
+  my passion and my dreams. It goes without saying that it was (and still is) a difficult task to 
+  strike a balance between both the fields, but I strongly believe that If you love something enough
+  and are determined to work towards that, you will definitely find out time to do that, and that’s 
+  what I did because the joy you get after making a beautiful and delicious piece of food and the 
+  pleasure you get when someone tastes it and appreciates it, is beyond imagination! This is what 
+  has driven me to achieve my dreams and today, I am a proud owner of small home based dessert business
+  and an Instagram blog, working relentlessly to realize my dreams and achieve greater and greater 
+  levels of satisfaction and happiness.
+  Wanna know how we started and where we are - add
+  </span>
+  <br><button class ="buttonreadmore" onclick="myFunction3()" id="myBtn3">Read now</button></p>
+  <br>
+
+    <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>Embracing Failures</u></b></span> <br>by Raunak Jain<br>
    <span id="dots2"></span><span id="more2">
   In school, Steve Jobs suffered as he had dyslexia. Jobs did not like education from his early days in
   elementary school, where he became dissatisfied with schooling to college, and  dropped out after just
@@ -264,44 +303,47 @@ Jobs preached that no matter what happens in your life, school failures or a fai
   </span>
   <br><button class ="buttonreadmore" onclick="myFunction2()" id="myBtn2">Read now</button></p>
 <br>
-
-   <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>From Closet to Boutique</u></span> <br>Article by Riya Maheshwari</b><br>
-   <span id="dots3"></span><span id="more3">
-   <span style="text-align: justify;">
-   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
-   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
-   it continues. Later on, the same us are left crying. If you think things are magically gonna 
-fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
-I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
-It devastates everything. So what can we do to erase this habit? Well the answer is so simple
- that it was always there with you. As the cliche saying goes, "Start grinding, start working".
- Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
- It's easier said than done though, no doubt. But who said trying has limited attempts?
-Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
-Always tell yourself that you deserve something much bigger than your excuses and laziness. 
-After all, you are a precious piece of a human with so much talent in and out.
-  </span></span>
-  <br><button class ="buttonreadmore" onclick="myFunction3()" id="myBtn3">Read now</button></p>
-  <br>
-
+  
   <p id="borderimg1">
-  <b> <span style="font-size: 18px;"><u>DESSERTMETER</u></span> <br>Article by Khushi Thakkar</b><br>
+  <b> <span style="font-size: 18px;"><u>The Missile Man</u></b></span> <br>by Antriksh Tiwari<br>
    <span id="dots4"></span><span id="more4">
-   <span style="text-align: justify;">
-   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
-   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
-   it continues. Later on, the same us are left crying. If you think things are magically gonna 
-fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
-I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
-It devastates everything. So what can we do to erase this habit? Well the answer is so simple
- that it was always there with you. As the cliche saying goes, "Start grinding, start working".
- Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
- It's easier said than done though, no doubt. But who said trying has limited attempts?
-Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
-Always tell yourself that you deserve something much bigger than your excuses and laziness. 
-After all, you are a precious piece of a human with so much talent in and out.
-  </span></span>
+
+ Known as the Missile Man of India, APJ Abdul Kalam was an Indian scientist and politician who played a
+ leading role in the development of India’s-missile and nuclear weapons programs. He was also elected 
+ president of India from 2002 to 2007. Kalam was born into a poor Tamil Muslim family on October 15, 1931,
+ in the pilgrimage town of Rameswaram, Tamil Nadu. After graduating from the Madras Institute of Technology 
+ in 1960, Kalam joined the Aeronautical Development Establishment of the Defence Research and Development
+ Organisation as a scientist, after becoming a member of the DRDS.
+In 1969, Dr Kalam was transferred andstarted working with the Indian Space Research Organisation.
+ The same year Kalam received the government’s approval and expanded the programme to include more 
+ engineers. It was in the year 1974, under the supervision of Dr Kalam, India underwent its first nuclear
+ test. It was through these nuclear tests he showed the world India’s position and power in nuclear technology.
+He was the proud author of numerous inspirational books like India 2010, Ignited Minds, Mission India,
+ The Luminous Sparks and Inspiring Thoughts. Kalam was an optimistic person who had a vision of a stronger
+ India with a more educated and informed youth. In 1998, made his entry into medical industry along with 
+ cardiologist Soma Raju, where Kalam developed a low cost coronary stent, named the Kalam-Raju Stent. 
+ Kalam was appointed as Principal Scientific Adviser to the Government of India.
+Kalam served as the Chief Scientific Adviser to the Prime Minister and Secretary of the Defence Research 
+and Development Organisation from July 1992 to December 1999. Kalam served as the 11th President of India,
+ succeeding K. In 1981, The Government of India honoured him with the Padma Bhushan and in 1990, he was
+ awarded with another Padma Vibhushan for his work with ISRO and DRDO and his role as a scientific advisor 
+ to the Government. In 2012, Kalam was ranked number 2 in Outlook India’s poll of the Greatest Indian. 
+ In 1963 to 1964, he visited NASA’s Langley Research Center in Hampton, Virginia, Goddard Space Flight 
+ Center in Greenbelt, Maryland and Wallops Flight Facility.
+Between the 1970s and 1990s, Kalam made an effort to develop the Polar Satellite Launch Vehicle and SLV-III
+ projects, both of which proved to be successful. In May 2012, Kalam launched a programme for the youth of 
+ India called the What Can I Give Movement, with a central theme of defeating corruption. Kalam was travelling
+ to Shillong to deliver a lecture at the Indian Institute of Management Shillong, however only five minutes
+ into his lecture, he collapsed. Despite being placed in the intensive care unit, Kalam was confirmed dead 
+ of a sudden cardiac arrest.
+His last words, to his aide Srijan Pal Singh, were reportedly- Funny guy! Are you doing well? Following his
+ death, Kalam received numerous tributes. The Tamil Nadu state government announced that his birthday, 
+ 15 October, would be observed across the state as Youth Renaissance Day , the state government further 
+ instituted the Dr. Abdul Kalam Award, constituting an 8-gram gold medal, a certificate and ₹500,000. 
+ In his book India 2020, Kalam strongly advocated an action plan to develop India into a knowledge 
+ superpower and a developed nation by the year 2020.
+He regarded his work on India’s nuclear weapons programme as a way to assert India’s place as a future superpower.
+  </span>
   <br><button class ="buttonreadmore" onclick="myFunction4()" id="myBtn4">Read now</button></p>
 <br>
   
@@ -417,6 +459,22 @@ function myFunction5() {
   var dots = document.getElementById("dots5");
   var moreText = document.getElementById("more5");
   var btnText = document.getElementById("myBtn5");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
+function myFunction6() {
+  var dots = document.getElementById("dots6");
+  var moreText = document.getElementById("more6");
+  var btnText = document.getElementById("myBtn6");
 
   if (dots.style.display === "none") {
     dots.style.display = "inline";
