--- a/bookreviews.html
+++ b/bookreviews.html
@@ -448,7 +448,7 @@ outdone herself with this trilogy and a very recent addition of the trilogy’s 
 </div>
 	  </center>
 		<center><h4>Book - <u>Playing It My Way</u><br>by Sachin Tendulkar and B. Majumdar</h4></center>
-      <p>"Playing It My Way" is autobiography of Sachin Tendulkar. It describes Sachin's 24 years of 
+      <p>"Playing It My Way" is the autobiography of Sachin Tendulkar. It describes Sachin's 24 years of 
 	  journey between those
 	  <span id="dots11">...</span><span id="more11">
 	22 yards. The book contains 28 chapters which cover Sachin's journey from his childhood to his
